--- a/.github/workflows/wf4-deploy-docs.yaml
+++ b/.github/workflows/wf4-deploy-docs.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      NEXT_PUBLIC_BASE_PATH: /Cabra
+      NEXT_PUBLIC_BASE_PATH: /Ibex-docs
 
     strategy:
       matrix:
